# bedrock_mapart_gui

./: .gitignore  AGENTS.md  CONTEXT.md  PLAN.md  README.md  launch.bat  pyproject.toml
mapart_bedrock_gui/: app.py  builder.py  charcoal.json  colour_data.py  constants.py  coordinates.py  dither.py  presets.py  processor.py
mapart_bedrock_gui/dialogs/: color_picker.py  crop_dialog.py  full_preview.py  help_dialog.py
mapart_bedrock_gui/panels/: menu_bar.py  preview_panel.py  settings_panel.py  status_bar.py
mapart_bedrock_gui/theme/: __init__.py  dark-purple.json
