[tool.poetry]
name = "mapart-bedrock-gui"
version = "0.1.0"
description = "Minecraft Bedrock map art builder - GUI version"
authors = []
license = "MIT"

[tool.poetry.scripts]
mapart-gui = "mapart_bedrock_gui.app:main"

[tool.poetry.dependencies]
python = "^3.11"
pillow = ">=10.3.0"
customtkinter = ">=5.2"
bedrockpy = "^1.0.0"
numpy = ">=1.24"
adorable = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
