[tool.poetry]
name = "mapart-bedrock-gui"
version = "0.1.0"
description = "Minecraft Bedrock map art builder - GUI version"
authors = []
license = "MIT"

[tool.poetry.scripts]
mapart-gui = "mapart_bedrock_gui.app:main"

[tool.poetry.dependencies]
python = "^3.11"
pillow = ">=10.3.0"
customtkinter = ">=5.2"
bedrockpy = "^1.0.0"
numpy = ">=1.24"
adorable = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownParameterType = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
